css/styles.css
#title {
  background-color: #ff4c68;
}

.container-fluid {
  padding: 3% 15%;
}

h1 {
  font-family: 'Montserrat', sans-serif;
  font-weight: 800;
  font-size: 3.5rem;
  line-height: 1.5;
  color: white;
}

.navbar {
  padding-left: 0;
  /* padding-right: 0; */
}

.navbar-brand {
  font-family: Ubuntu;
  font-size: 2.5rem;
  font-weight: 900;
}

.nav-item {
  font-size: 1.25rem;
  margin-left: 1rem;
  margin-right: 1rem;
}

#title-row {
  padding-top: 70px;
}

#title-row img {
  width: 80%;
}

.rotateimg25 {
  -webkit-transform:rotate(25deg);
  -moz-transform: rotate(25deg);
  -o-transform: rotate(25deg);
  -ms-transform: rotate(25deg);
  transform: rotate(25deg);
}

#title-row h1 {
  margin-bottom: 30px;
}

#title-row button {
  margin-right: 15px;
}

